--- a/assets/uploadify.css
+++ b/assets/uploadify.css
@@ -1,10 +1,11 @@
 /*
-Copyright (c) 2009 Ronnie Garcia, Travis Nickels
+Uploadify v2.1.4
+Release Date: November 8, 2010
 
-This file is part of Uploadify v1.6.2
+Copyright (c) 2010 Ronnie Garcia, Travis Nickels
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
-of Uploadify and associated documentation files (the "Software"), to deal
+of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
@@ -13,7 +14,7 @@ furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.
 
-UPLOADIFY IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
@@ -21,27 +22,31 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 */
-
-.fileUploadQueueItem {
-	font: 11px Verdana, Geneva, sans-serif;
+.uploadifyQueueItem {
 	background-color: #F5F5F5;
-	border: 3px solid #E5E5E5;
+	border: 2px solid #E5E5E5;
+	font: 11px Verdana, Geneva, sans-serif;
 	margin-top: 5px;
 	padding: 10px;
-	width: 300px;
+	width: 350px;
 }
-.fileUploadQueueItem .cancel {
+.uploadifyError {
+	background-color: #FDE5DD !important;
+	border: 2px solid #FBCBBC !important;
+}
+.uploadifyQueueItem .cancel {
 	float: right;
 }
-.fileUploadProgress {
-	background-color: #FFFFFF;
-	border-top: 1px solid #808080;
-	border-left: 1px solid #808080;
-	border-right: 1px solid #C5C5C5;
-	border-bottom: 1px solid #C5C5C5;
+.uploadifyQueue .completed {
+	background-color: #E5E5E5;
+}
+.uploadifyProgress {
+	background-color: #E5E5E5;
 	margin-top: 10px;
 	width: 100%;
 }
-.fileUploadProgressBar {
+.uploadifyProgressBar {
 	background-color: #0099FF;
+	height: 3px;
+	width: 1px;
 }
